--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- <button><img src="images/search.png" alt=""></button> -->
         </div>
         <div class="weather">
-            <img src="/images/rain.png" class="weather-icon">
+            <img src="images/rain.png" class="weather-icon">
             <p class="weather-condition"></p>
             <h1 class="temp">35°c</h1>
             <h2 class="city">Nagpur</h2>
@@ -25,14 +25,14 @@
             <h4 class="time"></h4>
             <div class="details">
                 <div class="col">
-                    <img src="/images/humidity.png">
+                    <img src="images/humidity.png">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>  
                 </div>
                 <div class="col">
-                    <img src="/images/wind.png">
+                    <img src="images/wind.png">
                     <div>
                         <p class="wind">15 Km/hr.</p>
                         <p>Wind Speed</p>
